Fix playing game with bot

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 
 			<table class="points">
 				<tr class="points__titles">
-					<th class="points__title points__title--player-x" data-side="X">-</th>
+					<th class="points__title points__title--player-x" data-side="X">Player</th>
 					<th class="points__title points__title--tie">Tie</th>
-					<th class="points__title" data-side="O">-</th>
+					<th class="points__title points__title--player-o" data-side="O">Bot</th>
 				</tr>
 				<tr class="points__values">
 					<td class="points__value points__value--player-x" data-side="X">0</td>
