--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			</section>
     </main>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js"></script> -->
   </div>
 </body>
 </html>
